--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
            <a href="https://codepen.io/chanonroy/" target="_blank"> <i class="fa fa-codepen fa-3x fa-fw" aria-hidden="true"></i></a>
            <a href="https://dribbble.com/chanonroy" target="_blank"> <i class="fa fa-dribbble fa-3x fa-fw" aria-hidden="true"></i></a>
          </h3>
-         <h2> Front-End Developer </h2>
+         <h2> Chanon Roy | Web Developer </h2>
          <h3> Currently living in Ottawa, Canada </h3>
        </div>
 
@@ -34,15 +34,15 @@
               <el-col :lg="8">
                 <img src="dist/assets/roy.svg" alt="Roy">
               </el-col>
-              <el-col :lg="16">
-                <h1> About me </h1>
+              <el-col :lg="14">
+                <h1> {{ time_greeting }}, friend </h1>
                 <p class="text-muted">
-                  I'm a sociable and enthusiastic web developer with experience working in the modern front-end world and alongside popular
-                  server side frameworks such as <b> <a href="https://www.djangoproject.com/" target="_blank"> Django </a> </b> (Python) and <b><a href="https://expressjs.com/" target="_blank"> Express.js </a></b> (Node).
+                  My name is Chanon. I'm a sociable and enthusiastic web developer
+                  who currently builds things at <b> <a href="http://www.repable.com"  target="_blank"> Repable</a></b>,
+                  an analytics company in the eSports and gaming space.
                 </p>
                 <p class="text-muted">
-                  The core of my work consists of figuring out how to automate the boring stuff
-                  at scale while also dazzling users with a fantastic interactive experience. Currently, I am a Front-End Developer at <b> <a href="http://www.repable.com"  target="_blank"> Repable </a></b>.
+                  I love finding new ways to automate boring stuff at scale and build fantastic interactive experiences which dazzle and excite people.
                 </p>
               </el-col>
 
@@ -52,7 +52,7 @@
 
        <div class="panel">
          <div class="container container--skills">
-           <h1> Some of my skills </h1>
+           <h1> Some things that I do </h1>
 
            <el-row :gutter="10">
              <el-col :lg="8">
